<resources>
    <string name="app_name">NewChef</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Skills Dashboard</string>
    <string name="title_resources">Resources</string>
    <string name="user_name">UserNameHere</string>
    <string name="skills_tracked">Skills Tracked: %d</string>
    <string name="skills_learned">Skills Learned: %d</string>
    <string name="next_skill">Next Skill: %s</string>
    <string name="dashboard_skills_list_title">All skills</string>
</resources>
